[package]
name = "caseproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
argfile = "0.2.0"
clap = { version = "4.5.6", features = ["derive"] }
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.5", features = ["http1", "server", "tokio"] }
tokio = { version = "1.38.0", features = ["macros", "net", "rt-multi-thread"] }
