[package]
name = "caseproxy"
version = "0.1.0"
edition = "2021"
default-run = "caseproxy"

[dependencies]
anyhow = "1.0.86"
argfile = "0.2.0"
clap = { version = "4.5.6", features = ["derive"] }
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.5", features = ["http1", "server", "tokio"] }
sha3 = "0.10.8"
smallvec = "1.13.2"
tokio = { version = "1.38.0", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
rand = "0.8.5"
