[package]
name = "caseproxy"
version = "0.1.0"
edition = "2021"
default-run = "caseproxy"

[dependencies]
anyhow = "1.0.86"
argfile = "0.2.0"
clap = { version = "4.5.6", features = ["derive"] }
futures-util = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.5", features = ["http1", "server", "tokio"] }
sha3 = "0.10.8"
smallvec = "1.13.2"
tokio = { version = "1.38.0", features = ["macros", "net", "rt-multi-thread", "fs", "signal"] }
tokio-util = { version = "0.7.11", features = ["io"] }

[dev-dependencies]
rand = "0.8.5"
